fix: Improve header scroll wrap.

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -364,9 +364,16 @@ footer .container {
 @media screen and (max-width: 40rem) { /* phone */
     header nav {
         display: grid;
-        grid-template-columns: 100% repeat(4, 1fr);
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
 
         overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+        scroll-padding: var(--header-gap);
+    }
+    
+    header nav > * {
+        scroll-snap-align: start;
     }
 }
 
